--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "A modern and simple dark theme for VS Code that provides the user a great experience.",
   "version": "1.0.0",
   "publisher": "dnlcorona",
+  "license": "SEE LICENSE IN LICENSE.md",
   "engines": {
     "vscode": "^1.77.0"
   },
   "icon": "clairvoyance-icon.png",
   "categories": [
     "Themes"
+  ],
+  "keywords": [
+    "Theme",
+    "color-theme",
+    "Dark Theme",
+    "Night Theme",
+    "Accessible Theme",
+    "Clairvoyance Theme"
   ],
   "contributes": {
     "themes": [
